# shallow-water-demo

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker_intel.yml  linux_gnu.yml  linux_intel.yml  macos_gnu.yml  macos_intel.yml  shallow_water_status.yml
cmake/: compiler_flags_Cray_Fortran.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  shallow_water_compiler_flags.cmake
parm/: shallow_water.nl
src/: CMakeLists.txt  module_netcdf_utils.f90  module_shallow_water_adj.f90  module_shallow_water_geometry.f90  module_shallow_water_geometry_config.f90  module_shallow_water_kind.f90  module_shallow_water_model.f90  module_shallow_water_model_config.f90  module_shallow_water_state.f90  module_shallow_water_tl.f90  shallow_water.f90
test/: CMakeLists.txt  test_shallow_water_adj_adv_nsteps.f90  test_shallow_water_adj_init.f90  test_shallow_water_geometry.f90  test_shallow_water_geometry_config_arglist.f90  test_shallow_water_geometry_config_nlfile.f90  test_shallow_water_geometry_config_nlunit.f90  test_shallow_water_model_adv_nsteps.f90  test_shallow_water_model_config_arglist.f90  test_shallow_water_model_config_nlfile.f90  test_shallow_water_model_config_nlunit.f90  test_shallow_water_model_init.f90  test_shallow_water_model_regression.f90  test_shallow_water_state_halo.f90  test_shallow_water_state_init_default.f90  test_shallow_water_state_init_optional.f90  test_shallow_water_state_read.f90  test_shallow_water_state_write.f90  test_shallow_water_tl_adv_nsteps.f90  test_shallow_water_tl_init.f90  test_utilities.f90
test/test_input/: test_shallow_water_config.nl  test_shallow_water_reader.nc
